Align items in header and footer correctly

--- a/feed/static/feed/base.css
+++ b/feed/static/feed/base.css
@@ -80,15 +80,16 @@ header {
 
 }
 
+#container > a {
+    text-decoration: none;
+}
+
 #logoContainer, #profileContainer, #logoBtn {
     display: flex;
-
-    align-content: center;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-
-    width: 200px;
-
+    min-width: 12rem;
 }
 
 #searchForm {
@@ -117,8 +118,9 @@ input[type="search"] {
 
     font-size: 20px;
 
-    visibility: hidden;
+
 }
+
 
 #logoContainer {
     width: auto;
@@ -158,8 +160,6 @@ footer {
     justify-content: space-evenly;
 
     flex-direction: row;
-
-    width: 20%;
 
     font-size: 20px;
 
